--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -11,11 +11,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: requests in /Users/saschalandegge/opt/anaconda3/envs/main/lib/python3.7/site-packages (2.23.0)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /Users/saschalandegge/opt/anaconda3/envs/main/lib/python3.7/site-packages (from requests) (2.9)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/saschalandegge/opt/anaconda3/envs/main/lib/python3.7/site-packages (from requests) (2020.4.5.2)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /Users/saschalandegge/opt/anaconda3/envs/main/lib/python3.7/site-packages (from requests) (3.0.4)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /Users/saschalandegge/opt/anaconda3/envs/main/lib/python3.7/site-packages (from requests) (1.25.9)\n",
+      "Requirement already satisfied: requests in /home/manzi/anaconda3/lib/python3.8/site-packages (2.24.0)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (2020.6.20)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (1.25.11)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (3.0.4)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -61,6 +61,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def read_json_from_file(filename):\n",
+    "    with open(filename) as json_file:\n",
+    "        data = json.load(json_file)\n",
+    "        \n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_json_to_file(path, json):\n",
+    "\n",
+    "    if not os.path.exists(path):\n",
+    "        os.makedirs(path)\n",
+    "\n",
+    "    filename = '{0}.json'.format(time.time())\n",
+    "\n",
+    "    with open(os.path.join(path, filename), 'w') as f:\n",
+    "        json.dump(json, f, ensure_ascii=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def search(keyword):\n",
     "    part = \"snippet\"\n",
     "    max_results = 50\n",
@@ -85,7 +115,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_video_ids(search_data):\n",
+    "    \n",
+    "#     Initialize list\n",
+    "    video_ids = []\n",
+    "\n",
+    "#     Parse JSON\n",
+    "    for search_result in search_data[\"items\"]:\n",
+    "        video_ids.append(search_result[\"id\"][\"videoId\"]);\n",
+    "\n",
+    "    return video_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,66 +152,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": [
-    "data = search(\"360 video\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = \"runs\"\n",
-    "\n",
-    "if not os.path.exists(path):\n",
-    "    os.makedirs(path)\n",
-    "\n",
-    "file = \"run_{0}\".format(time.time())\n",
-    "filename = '{0}.json'.format(file)\n",
-    "\n",
-    "with open(os.path.join(path, filename), 'w') as f:\n",
-    "    json.dump(data, f, ensure_ascii=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def index_videos(filename):\n",
-    "    with open(filename) as json_file:\n",
-    "        data = json.load(json_file)\n",
-    "        \n",
-    "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'run_1606250570.805274.json'",
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'dump'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-ab380d226669>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindex_videos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-10-3259d6f7eea9>\u001b[0m in \u001b[0;36mindex_videos\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mindex_videos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mjson_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'run_1606250570.805274.json'"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-36c86294063d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Save search result\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mwrite_json_to_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"searches\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msearch_result\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Parse to get video ids\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-ae7100237a4e>\u001b[0m in \u001b[0;36mwrite_json_to_file\u001b[0;34m(path, json)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mensure_ascii\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'dump'"
      ]
     }
    ],
    "source": [
-    "data = index_videos(filename)"
+    "# Search YouTube API\n",
+    "search_result = search(\"360 video\")\n",
+    "\n",
+    "# Save search result\n",
+    "write_json_to_file(\"searches\", search_result)\n",
+    "\n",
+    "# Parse to get video ids\n",
+    "video_ids = get_video_ids(search_result)\n",
+    "\n",
+    "# Get video details for ids from YouTube\n",
+    "video_details = get_video_details(video_ids)\n",
+    "\n",
+    "# Save video details\n",
+    "write_json_to_file(\"videos\", video_details)"
    ]
   },
   {
@@ -172,8 +193,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data"
+    "data = read_json_from_file(filename)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -206,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
