Fixed caching bug when YouTube API quota is reached.

--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -2,31 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: requests in /home/manzi/anaconda3/lib/python3.8/site-packages (2.24.0)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (3.0.4)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (2.10)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (1.25.11)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (2020.6.20)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,13 +123,12 @@
     "    if response.status_code == 200:\n",
     "        return json.loads(response.content.decode('utf-8'))\n",
     "    else:\n",
-    "        print(\"HTTP not OK: {0}\".format(response.content))\n",
-    "        return None "
+    "        raise Exception(\"HTTP not OK: {0}\".format(response.content))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,13 +167,12 @@
     "    if response.status_code == 200:\n",
     "        return json.loads(response.content.decode('utf-8'))[\"items\"]\n",
     "    else:\n",
-    "        print(\"HTTP not OK: {0}\".format(response.content))\n",
-    "        return None"
+    "        raise Exception(\"HTTP not OK: {0}\".format(response.content))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +180,7 @@
     "    # Invoke external YouTube downloader with YouTube URL file\n",
     "    bashCommand = \"youtube-dl -a {0} -j > output_video_traces.temp\".format(url_file_path)\n",
     "\n",
-    "    print(\"Running youtube-dl: {0}\".format(bashCommand))\n",
+    "    print(\"-->Running youtube-dl: {0}\".format(bashCommand))\n",
     "\n",
     "    !{bashCommand}\n",
     "    \n",
@@ -214,18 +199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def do_work(search_term, page_limit):\n",
+    "def do_work(search_term, page_limit, video_ids_cache):\n",
     "    \n",
-    "    # Keep track of what (unique) video IDs we have found\n",
-    "    video_ids_set = set(read_json_from_file(\"cache\", \"found_video_ids.json\"))\n",
     "    # Count previously found videos\n",
-    "    initial_video_ids_set_size = len(video_ids_set)\n",
+    "    initial_video_ids_cache_size = len(video_ids_cache)\n",
     "    \n",
     "    next_page_token = None\n",
     "    \n",
@@ -240,14 +223,14 @@
     "        found_video_ids = get_video_ids(search_result)\n",
     "        \n",
     "        # Find which found IDs are not duplicates\n",
-    "        unique_video_ids = found_video_ids.difference(video_ids_set)\n",
+    "        unique_video_ids = found_video_ids.difference(video_ids_cache)\n",
     "        \n",
     "        # Obtain video details (including projection method)\n",
     "        video_details = get_video_details(unique_video_ids)\n",
     "        # Save video details\n",
     "        #write_json_to_file(\"video_details\", list(unique_video_ids))\n",
     "        \n",
-    "        # Find which of our video IDs refer to 360 videos\n",
+    "        # Find which of our video IDs actually refer to 360 videos\n",
     "        for video_details_item in video_details:\n",
     "            if (video_details_item['contentDetails']['projection'] != \"360\"):\n",
     "                # This is not a 360 video; remove it from the set\n",
@@ -255,21 +238,22 @@
     "        \n",
     "        # We now have a local set (unique_video_ids) which contains unique 360 video IDs\n",
     "        \n",
-    "        # Check if our set is not empty\n",
+    "        # Check if our unique video ids set is not empty\n",
     "        if (len(unique_video_ids) != 0):\n",
     "            # Save video IDs as URLs to hand to external YouTube Downloader\n",
     "            url_file_path = write_video_ids_to_url_file(\"videos\", unique_video_ids)\n",
     "\n",
     "            # Add found video IDs to our set (no duplicates)\n",
-    "            video_ids_set.update(unique_video_ids)\n",
+    "            video_ids_cache.update(unique_video_ids)\n",
     "\n",
     "            # Download video traces for the URLs found\n",
+    "            print(\"->Downloading [{0}] 360-degree video traces...\".format(len(unique_video_ids)))\n",
     "            youtube_downloader(url_file_path)\n",
     "        \n",
-    "            print(\"Processed {0} out of {1} search pages. Found and stored {2} video traces so far.\".format(\n",
-    "                i + 1,\n",
-    "                page_limit,\n",
-    "                len(video_ids_set) - initial_video_ids_set_size))\n",
+    "        print(\"Processed [{0}/{1}] search pages. Found and stored [{2}] video traces so far.\".format(\n",
+    "            i + 1,\n",
+    "            page_limit,\n",
+    "            len(video_ids_cache) - initial_video_ids_cache_size))\n",
     "        \n",
     "        # Check if there is a next page available\n",
     "        if ('nextPageToken' in search_result):\n",
@@ -280,44 +264,43 @@
     "            print(\"No more search results to explore for this search term: \\\"{0}\\\". Exiting...\".format(search_term))\n",
     "            break\n",
     "        \n",
-    "    print(\"Done. Processed and stored a total of {0} new 360-degree video traces. (Total cached: {1})\".format(\n",
-    "        len(video_ids_set) - initial_video_ids_set_size,\n",
-    "         len(video_ids_set)))\n",
+    "    print(\"Processed and stored a total of {0} new 360-degree video traces.\".format(\n",
+    "        len(video_ids_cache) - initial_video_ids_cache_size))\n",
     "    \n",
-    "    return video_ids_set"
+    "    return video_ids_cache"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running youtube-dl: youtube-dl -a videos/1607104719.2580764.csv -j > output_video_traces.temp\n",
-      "Processed 1 out of 2 search pages. Found and stored 32 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607104775.7875063.csv -j > output_video_traces.temp\n",
-      "Processed 2 out of 2 search pages. Found and stored 66 video traces so far.\n",
-      "Done. Processed and stored a total of 66 new 360-degree video traces. (Total cached: 70)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "processed_video_ids = do_work(\"360\", 2)"
+    "# Keep track of what (unique) video IDs we have found\n",
+    "video_ids_cache = set(read_json_from_file(\"cache\", \"found_video_ids.json\"))\n",
+    "\n",
+    "try:\n",
+    "    \n",
+    "    # Execute the program\n",
+    "    do_work(\"rollercoaster\", 20, video_ids_cache)\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(\"Execution interrupted: {0}\".format(e))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Store video IDs so that subsequent runs will avoid duplicates\n",
-    "write_json_to_file(\"cache\", list(processed_video_ids), \"found_video_ids.json\")"
+    "print(\"Writing found video IDs to cache...\")\n",
+    "write_json_to_file(\"cache\", list(video_ids_cache), \"found_video_ids.json\")\n",
+    "\n",
+    "print(\"Done. Total video traces cached: [{0}]\".format(len(video_ids_cache)))"
    ]
   },
   {
