start on analyzing of data

--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -11,11 +11,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: requests in /home/manzi/anaconda3/lib/python3.8/site-packages (2.24.0)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (3.0.4)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (2.10)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (1.25.11)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/manzi/anaconda3/lib/python3.8/site-packages (from requests) (2020.6.20)\n",
+      "Requirement already satisfied: requests in /Users/saschalandegge/opt/anaconda3/envs/main/lib/python3.7/site-packages (2.23.0)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /Users/saschalandegge/opt/anaconda3/envs/main/lib/python3.7/site-packages (from requests) (2.9)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /Users/saschalandegge/opt/anaconda3/envs/main/lib/python3.7/site-packages (from requests) (3.0.4)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /Users/saschalandegge/opt/anaconda3/envs/main/lib/python3.7/site-packages (from requests) (1.25.9)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/saschalandegge/opt/anaconda3/envs/main/lib/python3.7/site-packages (from requests) (2020.4.5.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -298,21 +298,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running youtube-dl: youtube-dl -a videos/1607104719.2580764.csv -j > output_video_traces.temp\n",
-      "Processed 1 out of 2 search pages. Found and stored 32 video traces so far.\n",
-      "Running youtube-dl: youtube-dl -a videos/1607104775.7875063.csv -j > output_video_traces.temp\n",
-      "Processed 2 out of 2 search pages. Found and stored 66 video traces so far.\n",
-      "Done. Processed and stored a total of 66 new 360-degree video traces. (Total cached: 70)\n"
+      "Running youtube-dl: youtube-dl -a videos/1607429747.592078.csv -j > output_video_traces.temp\n",
+      "Processed 3 out of 1000 search pages. Found and stored 5 video traces so far.\n",
+      "Running youtube-dl: youtube-dl -a videos/1607429753.5197492.csv -j > output_video_traces.temp\n",
+      "Processed 4 out of 1000 search pages. Found and stored 7 video traces so far.\n",
+      "Running youtube-dl: youtube-dl -a videos/1607429757.93767.csv -j > output_video_traces.temp\n",
+      "Processed 5 out of 1000 search pages. Found and stored 10 video traces so far.\n",
+      "Running youtube-dl: youtube-dl -a videos/1607429762.793486.csv -j > output_video_traces.temp\n",
+      "Processed 6 out of 1000 search pages. Found and stored 12 video traces so far.\n",
+      "Running youtube-dl: youtube-dl -a videos/1607429769.434012.csv -j > output_video_traces.temp\n",
+      "Processed 8 out of 1000 search pages. Found and stored 15 video traces so far.\n",
+      "Running youtube-dl: youtube-dl -a videos/1607429774.36975.csv -j > output_video_traces.temp\n",
+      "Processed 9 out of 1000 search pages. Found and stored 19 video traces so far.\n",
+      "Running youtube-dl: youtube-dl -a videos/1607429780.222069.csv -j > output_video_traces.temp\n",
+      "Processed 10 out of 1000 search pages. Found and stored 26 video traces so far.\n",
+      "Running youtube-dl: youtube-dl -a videos/1607429787.033859.csv -j > output_video_traces.temp\n",
+      "Processed 11 out of 1000 search pages. Found and stored 30 video traces so far.\n",
+      "Running youtube-dl: youtube-dl -a videos/1607429792.58175.csv -j > output_video_traces.temp\n",
+      "Processed 12 out of 1000 search pages. Found and stored 31 video traces so far.\n",
+      "HTTP not OK: b'{\\n  \"error\": {\\n    \"code\": 403,\\n    \"message\": \"The request cannot be completed because you have exceeded your \\\\u003ca href=\\\\\"/youtube/v3/getting-started#quota\\\\\"\\\\u003equota\\\\u003c/a\\\\u003e.\",\\n    \"errors\": [\\n      {\\n        \"message\": \"The request cannot be completed because you have exceeded your \\\\u003ca href=\\\\\"/youtube/v3/getting-started#quota\\\\\"\\\\u003equota\\\\u003c/a\\\\u003e.\",\\n        \"domain\": \"youtube.quota\",\\n        \"reason\": \"quotaExceeded\"\\n      }\\n    ]\\n  }\\n}\\n'\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-42715d47b303>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprocessed_video_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdo_work\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"360 sports\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-12-eb04c2582929>\u001b[0m in \u001b[0;36mdo_work\u001b[0;34m(search_term, page_limit)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;31m# Find which of our video IDs refer to 360 videos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mvideo_details_item\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvideo_details\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mvideo_details_item\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'contentDetails'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'projection'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"360\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m                 \u001b[0;31m# This is not a 360 video; remove it from the set\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
      ]
     }
    ],
    "source": [
-    "processed_video_ids = do_work(\"360\", 2)"
+    "processed_video_ids = do_work(\"360 sports\", 1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
